# yaprofi_robotics_2020

./: .gitignore  README.md  install_nvidia.bash  install_others.bash  proxy_itmo.bash  proxy_miet.bash  test_docker.bash  update_docker.bash  update_tasks.bash
bac_task/: CMakeLists.txt  package.xml  run_coppeliasim.bash  start_scene.bash  start_scene_headless.bash
bac_task/config/: floor_camera.xml  robots.yaml
bac_task/launch/: init_scene.launch  trajectory_vis.launch
bac_task/msg/: CameraFeatures.msg  CartesianTrajectory.msg
bac_task/rviz/: topic_visualisation.rviz
bac_task/scenes/: bac_scene.ttt
bac_task/src/: judge.py  main_solve.cpp  main_solve.py  main_solve_wrapper.py  marker_detector_node.cpp  robotino_kinematics.py  robotino_model.py  robotino_trajectory_generator.py  robots_coppelia_sim_interface.py  trajectory_drawer.py
bac_task/srv/: SetTrajectoryParameters.srv
docker/nvidia/: Dockerfile  Dockerfile.nvidia  build_docker.bash  exec_docker.bash  install_docker.bash  ros_entrypoint.sh  run_docker.bash  test_docker.bash
docker/others/: Dockerfile  build_docker.bash  install_docker.bash  ros_entrypoint.sh  run_docker.bash  test_docker.bash
docker/soft_updates/: Dockerfile  build_docker.bash  exec_docker.bash  miet_config.json  run_docker.bash  update.bash
docker/tello/: Dockerfile  build_docker.bash  exec_docker.bash  run_docker.bash  update.bash
mag_task/: ur_aux.py  ur_main.py
mag_task/scenes/: mag_scene.ttt
mag_task/task_cpp/: Makefile  py_bind.cpp  py_bind.h  ur_aux_cpp.py  ur_main.cpp  ur_peg_in_hole.ttt
mag_task/task_py/: ur_aux.py
test/: CMakeLists.txt  package.xml  run.bash  run_test_back.bash
test/launch/: run_test.launch
test/src/: test_node.py
